Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29722

Building with disabled RTTI fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.2
    • 5.0.1
    • Multimedia
    • None
    • Windows 7 SP1 x64
      Microsoft Visual C++ 2010 SP1 x64 build target
    • 2db2cde0d8433ad1aed59412717c4cddf496ba66

    Description

      When building with RTTI disabled the compilation fails on:
      qtmultimedia\src\plugins\wmf\player\mfvideorenderercontrol.cpp:2199

      because of QChildEvent childEvent = dynamic_cast<QChildEvent>(event);
      wich is normal, but I wonder why such dynamic_cast is left?

      I have fixed the issue by checking the QEvent::type() if actually is QChildEvent and then cast it using simple static_cast.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            storm Nikolay Nikolov Baklicharov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes